--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Nick Strayer's CV"
-author: Nick Strayer
+title: "Sneha Kannan's Resume"
+author: Sneha Kannan
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -24,29 +24,25 @@ library(tidyverse)
 
 # Is data stored in google sheets? If no data will be gather from the csvs/
 # folder in project
-using_googlesheets <- TRUE
+using_googlesheets <- FALSE
 
 # Just the copied URL from the sheet
-positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/14MQICF2F8-vf8CKPF1m4lyGKO6_thG-4aSwat1e2TWc"
+#positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/14MQICF2F8-vf8CKPF1m4lyGKO6_thG-4aSwat1e2TWc"
 
 # Is this sheet available for anyone to read? If you're using a private sheet
 # set this to false and go to gather_data.R and run the data loading manually
 # once to cache authentication
-sheet_is_publicly_readable <- TRUE
+#sheet_is_publicly_readable <- TRUE
 
 # Is the goal of this knit to build a document that is exported to PDF? If so
 # set this to true to have links turned into footnotes at the end of the
 # document
-PDF_EXPORT <- FALSE
+PDF_EXPORT <- TRUE
 
 
-CV_PDF_LOC <- "https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf"
-CV_HTML_LOC <- "nickstrayer.me/cv/"
+#CV_PDF_LOC <- "https://github.com/snehakannan/cv/raw/master/skannan_resume.pdf"
+#CV_HTML_LOC <- ""
 
-
-# A global (gasp) variable that holds all the links that were inserted for
-# placement at the end
-links <- c()
 
 # ======================================================================
 # Now we source two external scripts. One contains functions for building the
@@ -77,172 +73,71 @@ if(PDF_EXPORT){
 Aside
 ================================================================================
 
-
-![logo](logo.png){width=100%}
-
-```{r}
-# When in export mode the little dots are unaligned, so fix that. 
-if(PDF_EXPORT){
-  glue("View this CV online with links at _{CV_HTML_LOC}_")
-} else {
-  glue("[<i class='fas fa-download'></i> Download a PDF of this CV]({CV_PDF_LOC})")
-}
-```
+<!-- ```{r} -->
+<!-- # When in export mode the little dots are unaligned, so fix that.  -->
+<!-- if(PDF_EXPORT){ -->
+<!--   glue("View this CV online with links at _{CV_HTML_LOC}_") -->
+<!-- } else { -->
+<!--   glue("[<i class='fas fa-download'></i> Download a PDF of this CV]({CV_PDF_LOC})") -->
+<!-- } -->
+<!-- ``` -->
 
 Contact {#contact}
 --------------------------------------------------------------------------------
 
-```{r}
-contact_info %>% 
-  glue_data("- <i class='fa fa-{icon}'></i> {contact}")
-```
+<!-- - <i class="fa fa-envelope"></i>  -->
+<!-- - <i class="fa fa-link"></i> []() -->
+- <i class="fa fa-github"></i> [snehakannan](http://github.com/snehakannan)
+<!-- - <i class="fa fa-phone"></i> -->
+- <i class="fa fa-linkedin"></i> [snehakannan](https://www.linkedin.com/in/sneha-kannan/)
 
 
-
-Language Skills {#skills}
+Skills {#skills}
 --------------------------------------------------------------------------------
 
-```{r}
-build_skill_bars(skills)
-```
+- <i class="fa fa-laptop"></i> **Programming**: R, Python, PostgreSQL, Java, GitHub
 
+- <i class="fa fa-file-code-o"></i> **Tools**: tidyverse, caret, ggplot2, tidymodels, pandas,  scikit-learn, NumPy, Jupyter Notebook, Microstrategy
 
+- <i class="fa fa-book"></i> **Machine Learning**: Regression & Classification models (Linear & Logistic Regression, Random Forest, Boosting, Support Vector Machines), Model Selection and Evaluation, Hypothesis testing (A/B testing), Clustering, Segmentation, Optimization, MapReduce
 
 Disclaimer {#disclaimer}
 --------------------------------------------------------------------------------
 
 Made with the R package [**pagedown**](https://github.com/rstudio/pagedown). 
 
-The source code is available at [github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+The source code is available at [github.com/snehakannan/cv](https://github.com/snehakannan/cv).
 
 Last updated on `r Sys.Date()`.
-
 
 
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Sneha Kannan {#title}
 --------------------------------------------------------------------------------
+I am adept at processing large quantities of complex data, feature engineering, building and deploying machine learning models in production by collaborating with product managers, data engineers and software developers. I am seeking a new opportunity to utilize my skills and broaden my experience while I contribute to the growth of the organization.
 
+Work Experience {data-icon=suitcase}
+--------------------------------------------------------------------------------
 ```{r}
-print_text_block(text_blocks, 'intro')
+print_section(position_data, 'experience')
 ```
 
-
+<br/>
+<br/>
+<br/>
 
 Education {data-icon=graduation-cap data-concise=true}
 --------------------------------------------------------------------------------
-
 ```{r}
 print_section(position_data, 'education')
 ```
 
-
-
-Research Experience {data-icon=laptop}
+Graduate Projects {data-icon=university data-concise=true}
 --------------------------------------------------------------------------------
-
 ```{r}
-print_section(position_data, 'research_positions')
-```
-
-
-
-Industry Experience {data-icon=suitcase}
---------------------------------------------------------------------------------
-
-::: aside
-```{r}
-print_text_block(text_blocks, 'industy_experience_aside')
-```
-:::
-
-```{r}
-print_section(position_data, 'industry_positions')
-```
-
-<!-- These breaks just force a new page so section doesnt get cut off -->
-<br>
-<br>
-<br>
-
-Teaching Experience {data-icon=chalkboard-teacher}
---------------------------------------------------------------------------------
-
-::: aside
-```{r}
-print_text_block(text_blocks, 'teaching_experience_aside')
-```
-:::
-
-```{r}
-print_section(position_data, 'teaching_positions')
-```
-
-
-
-Selected Data Science Writing {data-icon=chart-line}
---------------------------------------------------------------------------------
-
-::: aside
-```{r}
-print_text_block(text_blocks, 'data_science_writing_aside')
-```
-:::
-
-```{r}
-print_section(position_data, 'data_science_writings')
-```
-
-
-
-Selected Press (About)  {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'about_me_press')
-```
-
-
-<br>
-<br>
-
-
-Selected Press (By)  {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'by_me_press')
-```
-
-
-
-Selected Publications, Posters, and Talks {data-icon=book}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'academic_articles')
-```
-
-
-
-```{r}
-if(PDF_EXPORT){
-  cat("
-  
-Links {data-icon=link}
---------------------------------------------------------------------------------
-
-<br>
-
-
-")
-  
-  walk2(links, 1:length(links), function(link, index){
-    print(glue('{index}. {link}'))
-  })
-}
+print_section(position_data, 'graduate_projects')
 ```
 
 
